--- a/config/locales/pagy.yml
+++ b/config/locales/pagy.yml
@@ -1,4 +1,4 @@
-# Standard pagy I18n strings
+# Standard pagy dictionary
 
 en:
   pagy:
@@ -6,6 +6,7 @@ en:
       prev: "&lsaquo;&nbsp;Prev"
       next: "Next&nbsp;&rsaquo;"
       gap: "&hellip;"
+      current: "You're on page"
     info:
       single_page:
         zero: "No %{item_name} found"
@@ -16,13 +17,161 @@ en:
         zero: "items"
         one: "item"
         other: "items"
-    compact:
-      page: Page
-      of: of
+    compact: "Page %{page_input} of %{pages}"
     items:
-      show: "Show"
-      items: "items per page"
+      one: "Show %{items_input} item per page"
+      other: "Show %{items_input} items per page"
+es:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;Prev"
+      next: "Siguiente&nbsp;&rsaquo;"
+      gap: "&hellip;"
+      current: "Estás en la página"
+    info:
+      single_page:
+        zero: "Sin resultados"
+        one: "Mostrando 1 %{item_name}"
+        other: "Mostrando %{count} %{item_name}"
+      multiple_pages: "Mostrando %{item_name} %{from}-%{to} de %{count} en total"
+      item_name:
+        zero: "ítems"
+        one: "ítem"
+        other: "ítems"
+    compact: "Página %{page_input} de %{pages}"
+    items:
+      one: "Mostrar %{items_input} ítem por página"
+      other: "Mostrar %{items_input} ítems por página"
+id:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;Balik"
+      next: "Lanjut&nbsp;&rsaquo;"
+      gap: "&hellip;"
+      current: "Anda di halaman"
+    info:
+      single_page:
+        zero: "Tidak ditemukan %{item_name}"
+        one: "Menampilkan <b>1</b> %{item_name}"
+        other: "Menampilkan <b>semua %{count}</b> %{item_name}"
+      multiple_pages: "Menampilkan %{item_name} <b>%{from}-%{to}</b> dari total <b>%{count}</b>"
+      item_name:
+        zero: "item"
+        one: "item"
+        other: "item"
+    compact: "Halaman %{page_input} dari %{pages}"
+    items:
+      one: "Tampilkan %{items_input} item per halaman"
+      other: "Tampilkan %{items_input} item per halaman"
+ja:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;前へ"
+      next: "次へ&nbsp;&rsaquo;"
+      gap: "&hellip;"
+    info:
+      single_page:
+        zero: "見つかりませんでした"
+        one: "<b>1</b> 件の%{item_name}"
+        other: "<b>%{count}</b> 件の%{item_name}"
+      multiple_pages: "<b>%{count}</b> 件中 <b>%{from}-%{to}</b> 件目の%{item_name}を表示中"
+      item_name:
+        zero: "結果"
+        one: "結果"
+        other: "結果"
+    compact: "ページ %{page_input} / %{pages}"
+    items:
+      one: "%{items_input} 件ずつ表示"
+      other: "%{items_input} 件ずつ表示"
+pt-br:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;Anterior"
+      next: "Próximo&nbsp;&rsaquo;"
+      gap: "&hellip;"
+      current: "Está na página"
+    info:
+      single_page:
+        zero: "Sem resultados"
+        one: "Mostrando 1 %{item_name}"
+        other: "Mostrando %{count} %{item_name}"
+      multiple_pages: "Mostrando %{item_name} %{from}-%{to} no total de %{count}"
+      item_name:
+        zero: "itens"
+        one: "item"
+        other: "itens"
+    compact: "Página %{page_input} de %{pages}"
+    items:
+      one: "Mostrar %{items_input} iten por página"
+      other: "Mostrar %{items_input} itens por página"
+ru:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;Назад"
+      next: "Вперёд&nbsp;&rsaquo;"
+      gap: "&hellip;"
+      current: "Вы на странице"
+    info:
+      single_page:
+        zero: "Пока %{item_name} нет"
+        one: "<b>1</b> %{item_name}"
+        few: "<b>%{count}</b> %{item_name}"
+        many: "Всего <b>%{count}</b> %{item_name}"
+        other: "Всего <b>%{count}</b> %{item_name}"
+      multiple_pages: "Всего <b>%{count}</b> %{item_name}, показаны с <b>%{from}</b> по <b>%{to}</b>"
+      item_name:
+        one: "запись"
+        few: "записи"
+        many: "записей"
+        other: "записей"
+    compact: "Страница %{page_input} из %{pages}"
+    items:
+      one: "Показать %{items_input} записей на странице"
+      few: "Показать %{items_input} записей на странице"
+      many: "Показать %{items_input} записей на странице"
+      other: "Показать %{items_input} записей на странице"
+tr:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;Önceki"
+      next: "Sonraki&nbsp;&rsaquo;"
+      gap: "&hellip;"
+    info:
+      single_page:
+        zero: "Hiç %{item_name} bulunamadı."
+        one: "<b>1</b> %{item_name} gösteriliyor."
+        other: "Toplam <b>%{count}</b> %{item_name} gösteriliyor."
+      multiple_pages: "<b>%{count}</b> %{item_name} içerisinden <b>%{from}-%{to}</b> kadarı gösteriliyor."
+      item_name:
+        zero: "kayıt"
+        one: "kayıt"
+        other: "kayıt"
+    compact: "Sayfa %{page_input} / %{pages}"
+    items:
+      one: "Göster %{items_input} sayfa başı"
+      other: "Göster %{items_input} sayfa başı"
+zh-cn:
+  pagy:
+    nav:
+      prev: "&lsaquo;&nbsp;上一页"
+      next: "下一页&nbsp;&rsaquo;"
+      gap: "&hellip;"
+    info:
+      single_page:
+        zero: " %{item_name}未找到"
+        one: "显示 <b>1</b> 条%{item_name}"
+        other: "显示<b>所有 %{count}</b> 条%{item_name}"
+      multiple_pages: "共 <b>%{count}</b> 条%{item_name}，显示 <b>%{from}-%{to}</b>"
+      item_name:
+        zero: "项目"
+        one: ""
+        other: ""
+    compact: "页面 %{page_input} / %{pages}"
+    items:
+      one: "每页显示 %{items_input} 条"
+      other: "每页显示 %{items_input} 条"
 
+  # PR for other languages are very welcome. Thanks!
 
   # we add the activerecord models here, since we don't use I18n
   # with I18n we don't need to add the models here, but we need to add
