--- a/config/locales/pagy.yml
+++ b/config/locales/pagy.yml
@@ -2,26 +2,25 @@
 
 en:
   pagy:
+
+    item_name:
+      one: "item"
+      other: "items"
+
     nav:
       prev: "&lsaquo;&nbsp;Prev"
       next: "Next&nbsp;&rsaquo;"
       gap: "&hellip;"
-    info:
-      single_page:
-        zero: "No %{item_name} found"
-        one: "Displaying <b>1</b> %{item_name}"
-        other: "Displaying <b>all %{count}</b> %{item_name}"
-      multiple_pages: "Displaying %{item_name} <b>%{from}-%{to}</b> of <b>%{count}</b> in total"
-      item_name:
-        zero: "items"
-        one: "item"
-        other: "items"
-    compact: "Page %{page_input} of %{pages}"
-    items:
-      one: "Show %{items_input} item per page"
-      other: "Show %{items_input} items per page"
 
-  # PR for other languages are very welcome. Thanks!
+    info:
+      no_items: "No %{item_name} found"
+      single_page: "Displaying <b>%{count}</b> %{item_name}"
+      multiple_pages: "Displaying %{item_name} <b>%{from}-%{to}</b> of <b>%{count}</b> in total"
+
+    combo_nav_js: "Page %{page_input} of %{pages}"
+
+    items_selector_js: "Show %{items_input} %{item_name} per page"
+
 
   # we add the activerecord models here, since we don't use I18n
   # with I18n we don't need to add the models here, but we need to add
@@ -29,6 +28,5 @@ en:
   activerecord:
     models:
       dish:
-        zero: Dishes
         one: Dish
         other: Dishes
